--- a/фотогал.html
+++ b/фотогал.html
@@ -8,7 +8,7 @@
     <header>
     <div class="container">
         <header align = "center">
-          <div class="logo"> фотогаллерея </div></header></div>
+          <div class="logo"> Фотогалерея </div></header></div>
         <div class="gallery">
           <img src="img/студенты.jpg" alt=""style="height: 371px">
           <img src="img/студенты2.jpg" alt=""style="height: 371px">
