--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="logo">Главная страница</div>
 			<div class="menu">
 				<ul class="nav">
-					<li><a class="link" href="фотогал.html">фотогаллерея</a></li>
+					<li><a class="link" href="фотогал.html">фотогалерея</a></li>
 					<li><a class="link" href="регистарция.html">регистрация участников </a></li>
 					<li><a class="link" href="рег сайт.html">регистрация на сайт</a></li>
 					<li><a class="link" href="авторизация.html">авторизация</a></li>
