--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
-	
+	<?php
+            require_once "../шапка_подвал/head.php";
+        ?>
 	<header>
 		
 		<div class="navigation">
